apps/remix/overlays/production/prod-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: remix-deployment
spec:
  replicas: 1
  template:
    spec:
      containers:
      - envFrom:
        - secretRef:
            name: prod-remix
            optional: false
        - configMapRef:
            name: remix-config
            optional: false
        image: 902342763241.dkr.ecr.us-west-2.amazonaws.com/remix-test
        imagePullPolicy: Always
        name: blues-remix
        ports:
          - containerPort: 80
            name: http
            protocol: TCP
        securityContext:
          privileged: false
