apps/remix/overlays/production/canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: remix-canary-svc
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  sessionAffinity: None
  type: ClusterIP
